testcase-platform-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testcase-platform


---
# UI Deployment and Service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-case-ui
  namespace: testcase-platform
  labels:
    app: test-case-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-case-ui
  template:
    metadata:
      labels:
        app: test-case-ui
    spec:
      containers:
        - name: test-case-ui
          imagePullPolicy: Never
          image: test-case-ui:latest          
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: test-case-ui
  namespace: testcase-platform
spec:
  selector:
    app: test-case-ui
  ports:
    - port: 5173
      targetPort: 5173
  type: ClusterIP

---
# api-layer Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-layer
  namespace: testcase-platform
  labels:
    app: api-layer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-layer
  template:
    metadata:
      labels:
        app: api-layer
    spec:
      containers:
        - name: api-layer
          image: api-layer:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api-layer-service
  namespace: testcase-platform
spec:
  selector:
    app: api-layer
  ports:
    - protocol: TCP
      port: 8010
      targetPort: 8000


---
# Document Preprocessor Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-preprocessor
  namespace: testcase-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: document-preprocessor
  template:
    metadata:
      labels:
        app: document-preprocessor
    spec:
      containers:
        - name: document-preprocessor
          image: document-preprocessor:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: document-preprocessor-service
  namespace: testcase-platform
spec:
  selector:
    app: document-preprocessor
  type: ClusterIP
  ports:
    - port: 8020
      targetPort: 8000
---
# Requirement Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: requirement-service
  namespace: testcase-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: requirement-service
  template:
    metadata:
      labels:
        app: requirement-service
    spec:
      containers:
        - name: requirement-service
          image: requirement-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: requirement-service
  namespace: testcase-platform
spec:
  selector:
    app: requirement-service
  type: ClusterIP
  ports:
    - port: 8030
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testcase-db-service
  namespace: testcase-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testcase-db-service
  template:
    metadata:
      labels:
        app: testcase-db-service
    spec:
      containers:
        - name: db-service
          image: testcase-db-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          command: ["/bin/bash"]
          args: ["./entrypoint.sh"]
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
---

apiVersion: v1
kind: Service
metadata:
  name: testcase-db-service
  namespace: testcase-platform
spec:
  selector:
    app: testcase-db-service
  ports:
    - protocol: TCP
      port: 8040
      targetPort: 8000
  type: ClusterIP

---
# PostgreSQL (Database)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: testcase-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: testcase-platform
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432

---
#ingress for Test Case Platform
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-case-ui-ingress
  namespace: testcase-platform
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: api-layer-service
                port:
                  number: 8010
          - pathType: Prefix
            path: /assets
            backend:
              service:
                name: test-case-ui
                port:
                  number: 80
          - pathType: Prefix
            path: /
            backend:
              service:
                name: test-case-ui
                port:
                  number: 80
